# phaserack

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: main.yaml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/AREAS/: psola.md  signalsmith.md  stretcher.md  wsola.md
docs/DECISIONS/: 0001-warble-owns-the-timestretcher-contract.md  0002-stretcher-taxonomy-and-autotune-first-roadmap.md
src/: lib.rs  signalsmith.rs  stretcher.rs
src/time_domain/: mod.rs  psola.rs  wsola.rs
tests/: signalsmith_accuracy.rs
