[package]
name = "phaserack"
description = "Time-stretching and pitch-shifting for the q-lib audio engine."
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/QsKue/phaserack"
readme = "README.md"

[features]
default = ["signalsmith"]
# The Signalsmith-backed realtime stretcher/pitch-shifter. Off-by-default-`false`
# consumers (e.g. mixrack) gate it behind their own feature so the trait + the
# Noop stretcher stay available without pulling the backend.
signalsmith = ["dep:signalsmith-stretch"]
# Pitch shifting on the time-domain (WSOLA) family = time-stretch then resample, so it
# needs a resampler. The resampler is dependency-injected (any `samplerack::Resampler` —
# the backend is the caller's choice, so std vs no_std is swappable at runtime), so this
# feature pulls only samplerack's trait (`default-features = false` → trait + Noop, no
# `rustfft`); phaserack stays FFT-free.
pitch-shift = ["dep:samplerack"]

[dependencies]
sinerack = { git = "https://github.com/QsKue/sinerack" }
signalsmith-stretch = { version = "0.1.3", optional = true }
samplerack = { git = "https://github.com/QsKue/samplerack", optional = true, default-features = false }

[dev-dependencies]
# A concrete FFT-free backend (`SincResampler`) to inject when testing WSOLA pitch
# shifting; feature-unifies with the optional dep above under `--features pitch-shift`.
samplerack = { git = "https://github.com/QsKue/samplerack", features = ["sinc"] }

# Standalone, independently-buildable crate, also checked out inside the q-lib
# workspace where it is consumed via a `[patch]` path redirect. `[workspace]`
# keeps Cargo from absorbing it as a member (a patch target cannot be a member).
[workspace]
